# MisaRin

./: .gitattributes  .gitignore  LICENSE  README.md  RUST_BRUSH_ENGINE_PLAN.md  RUST_MIGRATION_PLAN.md  flutter_rust_bridge.yaml  pubspec.yaml  update_web_release.py
.claude/: settings.local.json
android/: local.properties
docs/: hard_bans_macos.md  perf_targets_macos.md
lib/: main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: canvas_engine.rs  canvas_present.wgsl  canvas_present_rgba8.wgsl  cpu_brush.rs  cpu_filters.rs  cpu_image.rs  cpu_transform.rs  frb_generated.rs  lib.rs
rust/src/api/: abr.rs  bucket_fill.rs  cpu_blend.rs  cpu_brush.rs  cpu_filters.rs  cpu_image.rs  cpu_transform.rs  gpu_brush.rs  gpu_brush_stub.rs  gpu_composite.rs  image_ops.rs  memory.rs  mod.rs  psd.rs  selection_path.rs  workspace.rs
rust/src/canvas_engine/: engine.rs  ffi.rs  layers.rs  present.rs  preview.rs  preview_stroke.wgsl  stroke.rs  transform.rs  transform.wgsl  transform_rgba8.wgsl  types.rs  undo.rs
rust/src/gpu/: blend_modes.rs  brush_renderer.rs  brush_shaders.wgsl  brush_shaders_rgba8.wgsl  bucket_fill_renderer.rs  bucket_fill_shaders.wgsl  bucket_fill_shaders_rgba8.wgsl  compositor.rs  debug.rs  filter_renderer.rs  filter_shaders.wgsl  filter_shaders_rgba8.wgsl  layer_format.rs  layer_texture.rs  mod.rs  shaders.wgsl
rust_builder/: pubspec.yaml
shaders/: antialias_alpha.frag  antialias_edge.frag  bake_clouds.frag
test/: flutter_test_config.dart  widget_test.dart
tool/: run_web_with_headers.sh  sai2_test.dart
web/: index.html  manifest.json
(+487 files in other folders)
