[package]
name = "rust_lib_misa_rin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
psd = { path = "../third_party/psd" }
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = "1.10"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu-hal = { version = "0.19.5", features = ["metal"] }
metal = "0.27.0"

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-hal = { version = "0.19.5", features = ["dx12"] }
d3d12 = { version = "0.19.0", features = ["libloading"] }
winapi = { version = "0.3", features = ["d3d12", "dxgiformat", "dxgitype", "handleapi", "winnt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[patch.crates-io]
flutter_rust_bridge = { path = "third_party/flutter_rust_bridge" }
